[tool.poetry]
name = "gamesortvisualize"
version = "0.1.1"
description = "A Sorting Visualizer for Sorting Algorithms"
authors = ["sakthiRatnam <sakthiratnam050@gmail.com>"]
license = "MIT-LICENSE"
readme = "README.md"
homepage = "https://github.com/sakthiRathinam/gamesortvisualize"
repository = "https://github.com/sakthiRathinam/gamesortvisualize"
documentation = "https://github.com/sakthiRathinam/gamesortvisualize"
keywords = ["sortingvisualizer", "pygamesorting"]
include = ["LICENSE", "README.md"]
[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
